Created attachment 103982 [details] Contains Images, hyperlink, content control in header and footer Steps to reproduce : 1] Open file in LO 2] Perform save_as to DOCX 3] Open saved file in MS Office-2010 Current behavior : File gets corrupt after Roundtrip Expected behavior : File should get open on MS Office-2010 without corruption.
Confirmed with master on Linux save against Word 2007. It imports fine from saving it in 4.2.5 and 4.3.1. The error given is: Location: Part: /word/header1.xml, Line: 2, Column: 4420 After pressing okay a few times, it did load the file but blue waves image in the header was missing.
Regression does not appear in latest version of 43all and must be younger. Add bibisected and bibisectednewer as specified in the QA Wiki
Pallavi Jadhav committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=f6e7b94042070241cd1cfb1d7f8610fe1801b4f2 fdo#82123 : DOCX: Corruption: File was getting corrupt fafter RT The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Fix applied + Unit test -> RESOLVED FIXED
Migrating Whiteboard tags to Keywords: (bibisected bibisectednewer filter:docx ) [NinjaEdit]