fdo#82123 : DOCX: Corruption: File was getting corrupt fafter RT

Issue :
	- In issue file there were two runs(first run=SDT, second run=Image).
	- These two runs were consecutive(no text/space/tab was there in between two runs).
	- Due to such scenario, "SdtEndBefore" was not getting set.
	- Hence at Export EndSdtBlock() was getting called form EndParagraph()
	  Instead EndSdtBlock() should ge called from EndRun() in order to end
	  sdt after first run(as in Original file)

	Implementation :
	- Set "SdtEndBefore" on Graphic in DomainMapper_Impl::ImportGraphic()
	- Retrieved same property at export.
	- Added export unit test case.

Change-Id: Id514b91f1831af371924f94388f0a404d762c042