sw/source/filter/ww8/docxattributeoutput.cxx
@@ -3988,6 +3988,34 @@ void DocxAttributeOutput::ClearRelIdCache()
 void DocxAttributeOutput::FlyFrameGraphic( const SwGrfNode* pGrfNode, const Size& rSize, const SwFlyFrmFmt* pOLEFrmFmt, SwOLENode* pOLENode, const SdrObject* pSdrObj )
 {
     OSL_TRACE( "TODO DocxAttributeOutput::FlyFrameGraphic( const SwGrfNode* pGrfNode, const Size& rSize, const SwFlyFrmFmt* pOLEFrmFmt, SwOLENode* pOLENode, const SdrObject* pSdrObj  ) - some stuff still missing" );
+
+    if (pSdrObj)
+    {
+        uno::Reference<drawing::XShape> xShape(const_cast<SdrObject*>(pSdrObj)->getUnoShape(), uno::UNO_QUERY_THROW);
+        if( xShape.is() )
+        {
+            uno::Reference< beans::XPropertySet > xPropSet( xShape, uno::UNO_QUERY );
+            uno::Reference< beans::XPropertySetInfo > xPropSetInfo;
+            if( xPropSet.is() )
+            {
+                xPropSetInfo = xPropSet->getPropertySetInfo();
+                if (xPropSetInfo.is() && xPropSetInfo->hasPropertyByName("FrameInteropGrabBag"))
+                {
+                    uno::Sequence< beans::PropertyValue > aGrabBag;
+                    xPropSet->getPropertyValue("FrameInteropGrabBag") >>= aGrabBag;
+                    for (sal_Int32 nProp=0; nProp < aGrabBag.getLength(); ++nProp)
+                    {
+                        if ("SdtEndBefore" == aGrabBag[nProp].Name && m_bStartedCharSdt && !m_bEndCharSdt)
+                        {
+                            aGrabBag[nProp].Value >>= m_bEndCharSdt;
+                        }
+                        break;
+                    }
+                }
+            }
+        }
+    }
+
     // detect mis-use of the API
     assert(pGrfNode || (pOLEFrmFmt && pOLENode));
     const SwFrmFmt* pFrmFmt = pGrfNode ? pGrfNode->GetFlyFmt() : pOLEFrmFmt;
